scss/partials/_widgets.scss
/* ... */
/*! =Default Widgets 
------------------------------------------------------------------------- */


.widget.widget_calendar .widgettitle {
	font-size: rem-calc(24);
	padding: 15px 0;
}
table#wp-calendar {
	max-width: 425px;
	caption, thead {
		line-height: 50px;
		height: 50px;
		border: 1px solid;
		@media #{$small-only} {
			line-height: 30px;
			height: 30px;
		}
	}
	tbody tr {
		background-color: #F9F9F9;
		td {
			padding: 20px;
			@media #{$medium-only} {
				padding: 12px;
			}
			@media #{$small-only} {
				padding: 5px;
			}
		}
	}
	tfoot tr {
		background-color: #EEEEEE;
		td a {
			font-size: rem-calc(16);
		}
	}
}

.sidebar .widget_nav_menu .label {
	background: none;
}

/** new stuff **/
.widget, .impress-lead-login, .impress-lead-signup {
	select, input[type="text"], input[type="email"], input[type="tel"], input[type="password"] {
		font-family: $header-font-family;
		background: #fff;
		box-shadow: none;
		border: 2px solid #e6e6e6;
		border-radius: 5px;
		font-size: rem-calc(16);
		height: 45.5px;
		font-weight: 400;
		margin-bottom: 30px;
		transition: .3s;
		&:focus {
			background-color: #fff;
		}
	}	
}

.impress-lead-login, .impress-lead-signup {
	margin: 35px 0;
}

.impress-idx-signup-widget, .equity-idx-search-widget {
	> p {
		padding-bottom: 20px;
	}
	label {
		display: none;
	}
	button {
		width: 100%;
		font-weight: 400;
		text-transform: uppercase;
		font-size: rem-calc(18);
		letter-spacing: .02px;
		line-height: 44.5px;
		padding: 0;
		background: #fff;
		border-radius: 5px;
	}
}

div[class*='home-middle-'].bg-gradient, footer.site-footer .footer-widgets {
	.impress-idx-signup-widget, .equity-idx-search-widget {
		button {
			&:hover, &:active {
				background: #eee;
			}
		}
	}
}

.equity-idx-search-widget {
	button {
		.fa-search {
			display: none;
		}
	}
}

.widget-title, .widgettitle {
	
}

.impress-carousel-widget .carousel-photo {
	margin-bottom: 20px;

}

.sidebar, .single {
	.impress-carousel {
		background: #fff;
		margin: 35px 0;
		padding: 15px 0;
		.carousel-photo {
			height: 235px;
		}
		a {
			color: #000;
			font-size: 1rem;
			text-decoration: none;
		}
		.property-details {
			font-size: rem-calc(18);
			.address, .city-state {
				font-weight: bold;
			}
		}
		h3.price {
			font-size: rem-calc(28);
		}
		.carousel-photo {
			height: 235px;
			img {
				width: 100%;
				height: 100%;
				object-fit: cover;
			}
		}
		.owl-controls span {
			font-size: rem-calc(20);
			position: absolute;
			left: 0;
			right: 0;
			bottom: -35px;
			display: block;
		}
		.owl-nav.owl-controls button {
			margin-top: 20px;
		}
		.owl-prev, .owl-next {
			span {
				display: none;
			}
		}
	}
}

.sidebar {
	.impress-carousel {
		.owl-nav.owl-controls button.owl-prev {
			float: left;
			margin-left: 30px;
		}
		.owl-nav.owl-controls button.owl-next {
			float: right;
			margin-right: 30px;
		}
	}
}

div[class*='home-middle-'].bg-gradient, footer.site-footer .footer-widgets {
	.impress-idx-signup-widget, .equity-idx-search-widget {
		button {
			&:hover, &:active {
				background: #eee;
			}
		}
	}
}

div.impress-carousel .owl-nav.owl-controls button.owl-prev,
div.impress-carousel .owl-nav.owl-controls button.owl-next {
	height: 60px;
	width: 60px;
	border: 2px solid;
}
div.impress-carousel .owl-nav.owl-controls button.owl-prev {
	margin: 40px 24px;
	margin-left: 0;

}
div.impress-carousel .owl-nav.owl-controls button.owl-next {
	margin: 40px 24px;
	margin-right: 0;
}

// Make the chevrons look centered
div.impress-carousel .owl-nav.owl-controls button.owl-prev i {
	padding-right: 2px;
}
div.impress-carousel .owl-nav.owl-controls button.owl-next i {
	padding-left: 2px;
}



div.impress-carousel, div.equity-idx-carousel {
	 .carousel-property {
		width: 235px;
		margin: 0 auto;
	}

	.carousel-photo {
		position: relative;
		width: 235px;
		height: 235px;
		border-radius: 100%;
		overflow: hidden;
		img {
			position: relative;
			height: 100%;
			object-fit: cover; // No IE support, but the fallback looks decent enough
		}
	}

	.beds-baths span+span {
		margin-left: 10px;
	}
}


.singleTestimonialWidget, .listTestimonialsWidget {
	margin: 0 auto;
	max-width: 900px;
}
div.easy_testimonial_image_wrapper {
	img.wp-post-image {
		margin-right: 55px;
	}
}
.easy_testimonial {
	text-align: center;
	@media #{$medium-up} {
		text-align: left;
	}
	.testimonial_body p {
		@media #{$medium-up} {
			margin-left: 200px;
		}
	}
	.testimonial_author {
		@media #{$medium-up} {
			margin-left: 200px;
		}
		cite {
			&::before {
				padding-right: 5px;
			}
			span:first-child {
				display: inline;
			}
		}
	}
	img {
		float: none;
		@media #{$medium-up} {
			float: left;
		}
		width: 150px;
		height: 150px;
		border-radius: 100% !important;
	}
}

.IDX-mapWidgetWrap {
	position: relative;
	.IDX-mapHeader {
		position: absolute;
		top: 0;
		z-index: 1;
	}
	.IDX-mapCount {
		font-family: $header-font-family;
		font-weight: 400;
		font-size: 1.1rem;
		color: #4C5051;
		float: right !important;
		padding-right: 25px;
		padding-top: 5px;
	}
	.IDX-mapTab {
		float: left !important;
		border-radius: 0px;
		border: none;
		border-bottom-right-radius: 5px;
		box-shadow: 1px 1px 3px #666;
	}
	.leaflet-control-zoom {
		margin-top: 50px !important;
	}
}

// Featured agent (IDX)
.IDX-featuredAgentWrap {
	a {
		#IDX-featAgentImg {
			display: block;
			width: auto;
			margin: 0 auto;
		}
	}
	#IDX-featuredAgentCaption {
		text-shadow: none;
	}
}

